# artnode

./: .gitignore  PLAN.md  README.md  platformio.ini
artnode-rpi/: CMakeLists.txt  INSTALLING.md  README.md
artnode-rpi/install/: artnode-rpi.service
artnode-rpi/src/: artnet.cpp  artnet.h  color_utils.h  config.h  hub75_controller.cpp  hub75_controller.h  led_controller.cpp  led_controller.h  main.cpp  pattern_engine.cpp  pattern_engine.h  platform.h  runtime_config.cpp  runtime_config.h  web_config.cpp  web_config.h
artnode-rpi/tools/: send_test_pattern.py
sim/: README.md  mesh_sim.py  mesh_viz.py
src/: config.h  espnow_mesh.cpp  espnow_mesh.h  hub75_controller.cpp  hub75_controller.h  led_controller.cpp  led_controller.h  main.cpp  pattern_engine.cpp  pattern_engine.h  runtime_config.cpp  runtime_config.h  status_led.cpp  status_led.h  web_config.cpp  web_config.h
wokwi/: README.md  diagram.json  wokwi.toml
